// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Test component Link render link 1`] = `
<a
  className="sc-bdVaJa bDWFJH"
  href={undefined}
  onClick={[Function]}
  selected={false}
/>
`;

exports[`Test component Link render link click 1`] = `
<a
  className="sc-bdVaJa bDWFJH"
  href="/"
  onClick={[Function]}
  selected={true}
/>
`;

exports[`Test component Link render link selected 1`] = `
<a
  className="sc-bdVaJa bDWFJH"
  href="/"
  onClick={[Function]}
  selected={true}
/>
`;
